@@ -1,5 +1,7 @@
 2006-04-27  Michal Nazarewicz  <mina86/AT/tlen.pl>
 
+	* FvwmTransFocus: + error messages are printed only when debug's on
+
 	* Makefile: + FvwmTransFocus installer added
 
 	* slack-desc: + new applications added
